Apache POI, Spring MVC

--- a/src/main/resources/templates/casePage.html
+++ b/src/main/resources/templates/casePage.html
@@ -59,6 +59,7 @@
 			<td id="url"></td>
 		</tr>
 	</table>
+	<div><a href="/dbUpload">Click Here to Upload a Spreadsheet</a></div>
 </body>
 
 </html>
