--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -18,10 +18,11 @@
     <div id="map"></div>
     
     <script>
-    $( document ).ready(function() {
+//    $( document ).ready(function() {
     	 var plList = [(${plList})];
     	 markers = plList;
-    });
+    	 console.log(markers);
+ //   });
    
     
     </script>
